# gpt-cli

./: README.md  pyproject.toml
gptcli/: assistant.py  config.py  gpt.py
gptcli/providers/: anthropic.py  openai.py
