[project]
name = "gpt-command-line"
version = "0.4.3"
description = "Command-line interface for ChatGPT and Claude"
authors = [{ name = "Val Kharitonov", email = "val@kharvd.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.14"
keywords = [
    "cli",
    "command-line",
    "assistant",
    "openai",
    "claude",
    "cohere",
    "gpt-3",
    "gpt-4",
    "llm",
    "chatgpt",
    "gpt-cli",
    "anthropic",
    "gpt-client",
    "anthropic-claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic~=0.76.0",
    "attrs~=25.4.0",
    "black~=26.1.0",
    "cohere~=5.20.1",
    "google-genai~=1.59.0",
    "openai~=2.15.0",
    "prompt-toolkit~=3.0.52",
    "pytest~=9.0.2",
    "PyYAML~=6.0.2",
    "rich~=14.2.0",
    "typing_extensions~=4.12.2",
]

[project.optional-dependencies]
llama = ["llama-cpp-python==0.2.74"]

[project.urls]
"Homepage" = "https://github.com/kharvd/gpt-cli"

[project.scripts]
gpt = "gptcli.gpt:main"

[build-system]
requires = ["pip>=23.0.0", "setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"
